_infra/main.tf
terraform {
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = "~> 5.0"
    }
    github = {
      source  = "integrations/github"
      version = "~> 6.0"
    }
  }
  backend "s3" {
    region = "us-east-1"
    bucket         = "meeting-notes-terraform-state-bucket"
    key            = "meeting-notes-terraform/state"
    dynamodb_table = "meeting-notes-terraform-state-locks"
    encrypt = true
  }
}


variable GITHUB_TOKEN {
  sensitive = true
}
variable AWS_TOKEN_KEY {
  sensitive = true
}
variable DISCORD_CLIENT_ID {
  sensitive = true
}
variable DISCORD_BOT_TOKEN {
  sensitive = true
}
variable OPENAI_API_KEY {
  sensitive = true
}
variable OPENAI_ORGANIZATION_ID {
  sensitive = true
  default   = ""
}
variable OPENAI_PROJECT_ID {
  sensitive = true
  default   = ""
}

variable ENABLE_OAUTH {
  sensitive = false
  default   = "false"
}

variable DISCORD_CLIENT_SECRET {
  sensitive = true
  default   = ""
}

variable DISCORD_CALLBACK_URL {
  sensitive = true
  default   = ""
}

variable OAUTH_SECRET {
  sensitive = true
  default   = ""
}


provider "aws" {
  region = "us-east-1"
}

provider "github" {
  owner = "BASIC-BIT"
  token = var.GITHUB_TOKEN
}

resource "aws_ecr_repository" "app_ecr_repo" {
  name = "meeting-notes-bot-repo"
  image_tag_mutability = "IMMUTABLE"

  image_scanning_configuration {
    scan_on_push = true
  }

  encryption_configuration {
    encryption_type = "KMS"
    kms_key         = aws_kms_key.app_general.arn
  }
}

resource "aws_ecr_lifecycle_policy" "app_ecr_repo_lifecycle_policy" {
  repository = aws_ecr_repository.app_ecr_repo.name

  policy = <<EOF
{
    "rules": [
        {
            "rulePriority": 1,
            "description": "Keep last two images",
            "selection": {
                "tagStatus": "any",
                "countType": "imageCountMoreThan",
                "countNumber": 2
            },
            "action": {
                "type": "expire"
            }
        }
    ]
}
EOF
}

data "github_repository" "repo" {
  full_name = "BASIC-BIT/meeting-notes-discord-bot"
}

resource "github_repository_environment" "repo_sandbox_env" {
  repository = data.github_repository.repo.name
  environment = "sandbox"
}

resource "github_actions_environment_variable" "envvar_aws_region" {
  repository = data.github_repository.repo.name
  environment = github_repository_environment.repo_sandbox_env.environment
  variable_name = "AWS_REGION"
  value = "us-east-1"
}

resource "github_actions_environment_variable" "envvar_ecr_repository" {
  repository = data.github_repository.repo.name
  environment = github_repository_environment.repo_sandbox_env.environment
  variable_name = "ECR_REPOSITORY"
  value = aws_ecr_repository.app_ecr_repo.name
}

resource "github_actions_environment_variable" "envvar_aws_access_key_id" {
  repository = data.github_repository.repo.name
  environment = github_repository_environment.repo_sandbox_env.environment
  variable_name = "AWS_ACCESS_KEY_ID"
  value = var.AWS_TOKEN_KEY
}

resource "aws_vpc" "app_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "app-vpc"
  }
}

resource "aws_subnet" "app_public_subnet_1" {
  vpc_id                  = aws_vpc.app_vpc.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "us-east-1a"

  tags = {
    Name = "app-public-subnet-1"
  }
}

resource "aws_subnet" "app_public_subnet_2" {
  vpc_id                  = aws_vpc.app_vpc.id
  cidr_block              = "10.0.2.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "us-east-1b"

  tags = {
    Name = "app-public-subnet-2"
  }
}

resource "aws_internet_gateway" "app_internet_gateway" {
  vpc_id = aws_vpc.app_vpc.id

  tags = {
    Name = "app-internet-gateway"
  }
}

resource "aws_route_table" "app_route_table" {
  vpc_id = aws_vpc.app_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.app_internet_gateway.id
  }

  tags = {
    Name = "app-route-table"
  }
}

resource "aws_route_table_association" "public_subnet_1_assoc" {
  subnet_id      = aws_subnet.app_public_subnet_1.id
  route_table_id = aws_route_table.app_route_table.id
}

resource "aws_route_table_association" "public_subnet_2_assoc" {
  subnet_id      = aws_subnet.app_public_subnet_2.id
  route_table_id = aws_route_table.app_route_table.id
}

resource "aws_security_group" "ecs_service_sg" {
  description = "ECS service SG for meeting-notes-bot"
  vpc_id = aws_vpc.app_vpc.id

  ingress {
    description = "Allow app traffic from the internet to port 3001"
    from_port   = 3001
    to_port     = 3001
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ecs-service-sg"
  }
}

resource "aws_cloudwatch_log_group" "app_log_group" {
  name              = "/ecs/meeting-notes-bot"
  retention_in_days = 365
  kms_key_id        = aws_kms_key.app_general.arn

  tags = {
    Name = "app-log-group"
  }
}

resource "aws_kms_key" "app_general" {
  description             = "KMS key for ECR, CloudWatch logs, and other app resources"
  deletion_window_in_days = 7
  enable_key_rotation     = true
}

resource "aws_ecs_cluster" "main" {
  name = "meeting-notes-bot-cluster"

  setting {
    name  = "containerInsights"
    value = "enabled"
  }
}

# Define an IAM role for ECS task execution
resource "aws_iam_role" "ecs_task_execution_role" {
  name = "ecs_task_execution_role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17",
    Statement = [
      {
        Action = "sts:AssumeRole",
        Effect = "Allow",
        Principal = {
          Service = "ecs-tasks.amazonaws.com"
        }
      }
    ]
  })
}

# Attach the required policy to the execution role
resource "aws_iam_role_policy_attachment" "ecs_task_execution_policy" {
  role       = aws_iam_role.ecs_task_execution_role.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
}

# Create IAM policy for DynamoDB access
resource "aws_iam_policy" "dynamodb_access_policy" {
  name        = "meeting-notes-bot-dynamodb-policy"
  description = "Policy for Meeting Notes Bot to access DynamoDB tables"

  policy = jsonencode({
    Version = "2012-10-17",
    Statement = [
      {
        Effect = "Allow",
        Action = [
          "dynamodb:GetItem",
          "dynamodb:PutItem",
          "dynamodb:UpdateItem",
          "dynamodb:DeleteItem",
          "dynamodb:Query",
          "dynamodb:Scan"
        ],
        Resource = [
          aws_dynamodb_table.subscription_table.arn,
          aws_dynamodb_table.payment_transaction_table.arn,
          aws_dynamodb_table.access_logs_table.arn,
          aws_dynamodb_table.recording_transcript_table.arn,
          aws_dynamodb_table.auto_record_settings_table.arn,
          "${aws_dynamodb_table.auto_record_settings_table.arn}/index/*",
          aws_dynamodb_table.server_context_table.arn,
          aws_dynamodb_table.channel_context_table.arn,
          aws_dynamodb_table.meeting_history_table.arn,
          "${aws_dynamodb_table.meeting_history_table.arn}/index/*"
        ]
      }
    ]
  })
}

# Attach DynamoDB policy to the task role
resource "aws_iam_role_policy_attachment" "ecs_task_dynamodb_policy" {
  role       = aws_iam_role.ecs_task_execution_role.name
  policy_arn = aws_iam_policy.dynamodb_access_policy.arn
}

# Update the ECS task definition to include the execution role ARN
resource "aws_ecs_task_definition" "app_task" {
  family                   = "meeting-notes-bot-task"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = "512"
  memory                   = "1024"
  execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn
  task_role_arn            = aws_iam_role.ecs_task_execution_role.arn

  container_definitions = jsonencode([
    {
      name      = "meeting-notes-bot"
      image     = aws_ecr_repository.app_ecr_repo.repository_url
      cpu       = 512
      memory    = 1024
      essential = true
      portMappings = [
        {
          containerPort = 3001
          hostPort      = 3001
        }
      ]
      logConfiguration = {
        logDriver = "awslogs"
        options = {
          "awslogs-group"         = aws_cloudwatch_log_group.app_log_group.name
          "awslogs-region"        = "us-east-1"
          "awslogs-stream-prefix" = "ecs"
        }
      }
      environment = [
        {
          name  = "DISCORD_CLIENT_ID"
          value = var.DISCORD_CLIENT_ID
        },
        {
          name  = "DISCORD_CLIENT_SECRET"
          value = var.DISCORD_CLIENT_SECRET
        },
        {
          name  = "DISCORD_CALLBACK_URL"
          value = var.DISCORD_CALLBACK_URL
        },
        {
          name  = "OAUTH_SECRET"
          value = var.OAUTH_SECRET
        },
        {
          name  = "ENABLE_OAUTH"
          value = var.ENABLE_OAUTH
        },
        {
          name  = "DISCORD_BOT_TOKEN"
          value = var.DISCORD_BOT_TOKEN
        },
        {
          name  = "OPENAI_API_KEY"
          value = var.OPENAI_API_KEY
        },
        {
          name = "OPENAI_ORGANIZATION_ID"
          value = var.OPENAI_ORGANIZATION_ID
        },
        {
          name = "OPENAI_PROJECT_ID"
          value = var.OPENAI_PROJECT_ID
        },
      ]
#      healthCheck = {
#        command     = ["CMD-SHELL", "curl -f http://127.0.0.1:3001/health || exit 1"]
#        interval    = 30      # seconds
#        timeout     = 5       # seconds
#        retries     = 3
#        startPeriod = 120      # seconds, grace period before health checks start
#      }
    }
  ])
}

resource "aws_ecs_service" "app_service" {
  name            = "meeting-notes-bot-service"
  cluster         = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.app_task.arn
 lifecycle {
   ignore_changes = [
     task_definition
   ]
 }

  enable_execute_command = true

  desired_count   = 1
  launch_type     = "FARGATE"

  deployment_controller {
    type = "ECS"
  }

  deployment_minimum_healthy_percent = 50
  deployment_maximum_percent = 200

  network_configuration {
    subnets         = [aws_subnet.app_public_subnet_1.id, aws_subnet.app_public_subnet_2.id]
    security_groups = [aws_security_group.ecs_service_sg.id]
    assign_public_ip = true
  }
}

resource "aws_dynamodb_table" "subscription_table" {
  name           = "SubscriptionTable"
  billing_mode   = "PAY_PER_REQUEST"
  hash_key       = "UserID"

  attribute {
    name = "UserID"
    type = "S"
  }

  tags = {
    Name = "SubscriptionTable"
  }
}

resource "aws_dynamodb_table" "payment_transaction_table" {
  name           = "PaymentTransactionTable"
  billing_mode   = "PAY_PER_REQUEST"
  hash_key       = "TransactionID"

  attribute {
    name = "TransactionID"
    type = "S"
  }

  tags = {
    Name = "PaymentTransactionTable"
  }
}

resource "aws_dynamodb_table" "access_logs_table" {
  name           = "AccessLogsTable"
  billing_mode   = "PAY_PER_REQUEST"
  hash_key       = "AccessLogID"

  attribute {
    name = "AccessLogID"
    type = "S"
  }

  tags = {
    Name = "AccessLogsTable"
  }
}

resource "aws_dynamodb_table" "recording_transcript_table" {
  name           = "RecordingTranscriptTable"
  billing_mode   = "PAY_PER_REQUEST"
  hash_key       = "MeetingID"

  attribute {
    name = "MeetingID"
    type = "S"
  }

  tags = {
    Name = "RecordingTranscriptTable"
  }
}

resource "aws_dynamodb_table" "auto_record_settings_table" {
  name           = "AutoRecordSettingsTable"
  billing_mode   = "PAY_PER_REQUEST"
  hash_key       = "guildId"
  range_key      = "channelId"

  attribute {
    name = "guildId"
    type = "S"
  }

  attribute {
    name = "channelId"
    type = "S"
  }

  global_secondary_index {
    name            = "GuildRecordAllIndex"
    hash_key        = "guildId"
    projection_type = "ALL"
  }

  tags = {
    Name = "AutoRecordSettingsTable"
  }
}

# Server Context Table
resource "aws_dynamodb_table" "server_context_table" {
  name           = "ServerContextTable"
  billing_mode   = "PAY_PER_REQUEST"
  hash_key       = "guildId"
  
  attribute {
    name = "guildId"
    type = "S"
  }
  
  tags = {
    Name = "ServerContextTable"
  }
}

# Channel Context Table
resource "aws_dynamodb_table" "channel_context_table" {
  name           = "ChannelContextTable"
  billing_mode   = "PAY_PER_REQUEST"
  hash_key       = "guildId"
  range_key      = "channelId"
  
  attribute {
    name = "guildId"
    type = "S"
  }
  
  attribute {
    name = "channelId"
    type = "S"
  }
  
  tags = {
    Name = "ChannelContextTable"
  }
}

# Meeting History Table
resource "aws_dynamodb_table" "meeting_history_table" {
  name           = "MeetingHistoryTable"
  billing_mode   = "PAY_PER_REQUEST"
  hash_key       = "guildId"
  range_key      = "channelId_timestamp"
  
  attribute {
    name = "guildId"
    type = "S"
  }
  
  attribute {
    name = "channelId_timestamp"
    type = "S"
  }
  
  attribute {
    name = "timestamp"
    type = "S"
  }
  
  # GSI for querying all meetings in a guild by time
  global_secondary_index {
    name            = "GuildTimestampIndex"
    hash_key        = "guildId"
    range_key       = "timestamp"
    projection_type = "ALL"
  }
  
  tags = {
    Name = "MeetingHistoryTable"
  }
}

# Output the VPC ID
output "vpc_id" {
  value = aws_vpc.app_vpc.id
}

# Output the Subnet IDs
output "public_subnet_ids" {
  value = [aws_subnet.app_public_subnet_1.id, aws_subnet.app_public_subnet_2.id]
}

# Output the Security Group ID
output "ecs_service_sg_id" {
  value = aws_security_group.ecs_service_sg.id
}
